--- a/template/index.html
+++ b/template/index.html
@@ -9,8 +9,7 @@
     <link rel="apple-touch-icon" sizes="114x114" href="static/apple-touch-icon-114x114.png">
     <link rel="apple-touch-icon" sizes="72x72" href="static/apple-touch-icon-72x72.png">
     <link href="static/assets/css/robonomics_dapp.min.css?v=1" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
-    <link href='https://cdnjs.cloudflare.com/ajax/libs/MaterialDesign-Webfont/2.5.94/css/materialdesignicons.css' rel="stylesheet">
+    <link href='static/materialdesignicons/css/materialdesignicons.min.css' rel="stylesheet">
     <script src="static/socket.io.js"></script>
   </head>
   <body>
